# s3fp

./: Makefile.am  Makefile.in  README.backup  README.md  configure.ac  s3fp-install.py
examples/: Makefile.am  Makefile.am~  Makefile.in  div_geometric_primitives.lo  libdiv_geometric_primitives.la  s3fp-demo.py
examples/.libs/: libdiv_geometric_primitives.la  libdiv_geometric_primitives.lai  libdiv_geometric_primitives.so.0.0.0
examples/lib/div_geometric_primitives/: test_matrix_determinant_128  test_matrix_determinant_32  test_matrix_determinant_64
examples/tests-div-detection/: Makefile.am
examples/tests-div-detection/cpu-scan-harris-opt-last/: best_input_lb  best_input_ub  bgrt-input-he-0  bgrt-input-he-100  bgrt-input-he-200  bgrt-input-he-300  bgrt-input-le-0  bgrt-input-le-100  bgrt-input-le-200  bgrt-input-le-300  cpu-scan-128  cpu-scan-32  cpu-scan-64  cpu-scan.cpp  output_128  s3fp_setting  urt-input-0  urt-input-100  urt-input-200  urt-input-300
examples/tests-fp-error/: Makefile.am
examples/tests-fp-error/balanced-reduction/: Makefile.am  balanced-reduction-128  balanced-reduction-32  balanced-reduction-64
src/: #FP_UTILS.h#  .#FP_UTILS.h  EvaluationBasis.h  FPR.h  FPR.h~  Makefile.am  Makefile.am~  Makefile.in  S3FP_Core.cpp  S3FP_Core.cpp~  S3FP_Core.h  S3FP_ParseArgs.cpp  S3FP_ParseArgs.h  definitions.h  s3fp
src/.deps/: S3FP_Core.Po  S3FP_DifferentialContract.Po  S3FP_ErrorFunction.Po  S3FP_ErrorOptimization.Po  S3FP_OutputParser.Po  S3FP_ParseArgs.Po  S3FP_SignatureGen.Po
utils/: Makefile  comp-binary-results  comp-binary-results.cpp
(+1318 files in other folders)
